Removed protocol file

--- a/middleware/Dockerfile
+++ b/middleware/Dockerfile
@@ -12,9 +12,8 @@ RUN pip3 install -r requirements.txt
 RUN pip3 install -e .
 
 RUN rm -rf /neo-python/Chains/privatenet
-RUN rm ./protocol.privnet.json
-COPY ./protocol.privnet.json /neo-python/protocol.privnet.json
 
+RUN sed -i 's/127.0.0.1/private_net/g' ./protocol.privnet.json
 COPY src /src
 
 WORKDIR /src/
