--- a/neo-python/Dockerfile
+++ b/neo-python/Dockerfile
@@ -10,8 +10,7 @@ RUN git checkout development
 RUN pip3 install -r requirements.txt
 
 COPY ./neo-privnet.wallet /neo-python/wallets/neo-privnet.wallet
-RUN rm ./protocol.privnet.json
-COPY ./protocol.privnet.json /neo-python/protocol.privnet.json
+RUN sed -i 's/127.0.0.1/private_net/g' ./protocol.privnet.json
 
 CMD rm -rf /neo-python/Chains/privnet; screen python3 prompt.py -p
 
