--- a/middleware/Dockerfile
+++ b/middleware/Dockerfile
@@ -12,7 +12,7 @@ RUN pip3 install -r requirements.txt
 RUN pip3 install -e .
 
 RUN rm -rf /neo-python/Chains/privatenet
-
+COPY ./neo-privnet.wallet /neo-python/wallets/neo-privnet.wallet
 RUN sed -i 's/127.0.0.1/private_net/g' ./protocol.privnet.json
 COPY src /src
 
