--- a/secrets.env
+++ b/secrets.env
@@ -1,5 +1,5 @@
 WALLET_FILE=/neo-python/wallets/neo-privnet.wallet
 WALLET_FILE_PWD=coz
 
-SCRIPT_HASH=secret
-NM_AUTH_TOKEN=secret
+SCRIPT_HASH=c4f6a9a179dc0efdce7983e389120065255ecabc
+REDIS_AUTH_TOKEN=secret
